# glowy-langsec

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  flake.nix
.github/workflows/: ci-build-test.yml  ci-formatting.yml
examples/01-hello-world/: go.mod  main.go
examples/02-variable-operations/: go.mod  main.go
examples/03-conditionals/: go.mod  main.go
examples/04-functions/: go.mod  main.go
examples/05-recursive-functions/: go.mod  main.go
examples/06-channels/: go.mod  main.go
examples/07-nested-function-calls/: go.mod  main.go
parser/: Cargo.toml
parser/src/: ast.rs  consts.rs  errors.rs  exprs.rs  lexer.rs  lib.rs  main.rs  parser.rs  stream.rs  token.rs
parser/src/exprs/: literals.rs  names.rs  ops.rs
parser/src/parser/: consts.rs  decls.rs  exprs.rs  imports.rs  stmts.rs  types.rs
parser/src/parser/decls/: bindings.rs  funcs.rs
parser/src/parser/exprs/: ops.rs  postfix.rs
parser/src/parser/stmts/: concur.rs  flow.rs
reports/: .gitignore  1-proposal.typ  2-draft.typ  3-final.typ  presentation.typ  template.typ
reports/assets/: opaque.ansi  opaque.go  synthetic-foo.go  synthetic-main.go
src/: context.rs  decls.rs  errors.rs  labels.rs  lib.rs  main.rs  symbols.rs  taint.rs
src/taint/: channels.rs  explicit.rs  exprs.rs  funcs.rs  implicit.rs
